tests/snapshots/examples_fixtures/type_system__failing__137_tuple_projection_unresolved_path_unchanged.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/137_tuple_projection_unresolved_path_unchanged.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `mystery`.

  examples/type_system/failing/137_tuple_projection_unresolved_path_unchanged.flx:2:22
  |
2 |     let value: Int = mystery.0
  |                      ^^^^^^^

Hint:
  Define it first: let mystery = ...;
== stdout ==
<not executed>
